# gRPC-with-Cpp

./: README.md
cpp-server/: CMakeLists.txt  main.cpp
qt-client/: CMakeLists.txt  main.cpp
qt-client/proto/: clientguide.proto
